@@ -51,8 +51,8 @@ public class FlowableUtils {
         TaskRun parentTaskRun
     ) {
         // nothing
-        if (currentTasks == null || currentTasks.size() == 0) {
-            return new ArrayList<>();
+        if (currentTasks == null || currentTasks.size() == 0 || execution.getState().getCurrent() == State.Type.KILLING) {
+            return Collections.emptyList();
         }
 
         // first one
@@ -64,13 +64,13 @@ public class FlowableUtils {
         // first created, leave
         Optional<TaskRun> lastCreated = execution.findLastCreated(currentTasks, parentTaskRun);
         if (lastCreated.isPresent()) {
-            return new ArrayList<>();
+            return Collections.emptyList();
         }
 
         // have running, leave
         Optional<TaskRun> lastRunning = execution.findLastRunning(currentTasks, parentTaskRun);
         if (lastRunning.isPresent()) {
-            return new ArrayList<>();
+            return Collections.emptyList();
         }
 
         // last success, find next
@@ -83,7 +83,7 @@ public class FlowableUtils {
             }
         }
 
-        return new ArrayList<>();
+        return Collections.emptyList();
     }
 
     public static Optional<State.Type> resolveState(
@@ -142,6 +142,10 @@ public class FlowableUtils {
         TaskRun parentTaskRun,
         Integer concurrency
     ) {
+        if (execution.getState().getCurrent() == State.Type.KILLING) {
+            return Collections.emptyList();
+        }
+
         List<ResolvedTask> currentTasks = execution.findTaskDependingFlowState(
             tasks,
             errors,
@@ -158,7 +162,7 @@ public class FlowableUtils {
                 .stream()
                 .noneMatch(taskRun -> FlowableUtils.isTaskRunFor(resolvedTask, taskRun, parentTaskRun))
             )
-            .collect(Collectors.toList());
+            .toList();
 
         // find all running and deal concurrency
         long runningCount = taskRuns
@@ -167,7 +171,7 @@ public class FlowableUtils {
             .count();
 
         if (concurrency > 0 && runningCount > concurrency) {
-            return new ArrayList<>();
+            return Collections.emptyList();
         }
 
         // first created, leave
@@ -185,7 +189,7 @@ public class FlowableUtils {
             return nextTaskRunStream.collect(Collectors.toList());
         }
 
-        return new ArrayList<>();
+        return Collections.emptyList();
     }
 
     private final static TypeReference<List<Object>> TYPE_REFERENCE = new TypeReference<>() {};
